methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:8: error: ';' expected but 'return' found.
  }return vuBiscuit
   ^